--- a/package.json
+++ b/package.json
@@ -17,14 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "jest": "^20.0.4",
-    "react-test-renderer": "^15.6.1"
-  }
+  "devDependencies": {}
 }
